<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.baris.whatis.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:contentDescription="@string/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/AppBarLayout_height"
        android:fitsSystemWindows="true"
        android:elevation="@dimen/AppBarLayout_elevation">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:contentDescription="@string/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbar_iv"
                android:contentDescription="@string/toolbar_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/flag_india"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/main_bg"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:contentDescription="@string/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                android:layout_gravity="bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:contentDescription="@string/title_main"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/constraint_layout_et_ib_rv"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageButton
            android:id="@+id/search_ib"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_ib"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/search_button_text"
            android:src="@drawable/ic_action_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_hint"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/search_ib"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <include layout="@layout/load" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/entries_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/entries_rv"
            android:paddingBottom="128dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/search_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <include layout="@layout/message" />

    </android.support.constraint.ConstraintLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_view_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/navigation_view_main"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        app:elevation="@dimen/BottomNavigationBar_elevation"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector_bottombar_item"
        app:itemTextColor="@drawable/selector_bottombar_text"
        app:menu="@menu/navigation"/>

</android.support.design.widget.CoordinatorLayout>
