<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout_history"
    tools:context="com.example.baris.whatis.user_interface.history.HistoryActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        >

        <android.support.v7.widget.Toolbar
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/toolbar_history"
            android:id="@+id/toolbar_history"
            app:titleTextAppearance="@style/ToolbarText"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/history_rv"
            android:contentDescription="@string/history_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/navigation_view_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_history" />


        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation_view_history"
            android:contentDescription="@string/navigation_view_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            app:elevation="@dimen/BottomNavigationBar_elevation"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@drawable/selector_bottombar_item"
            app:itemTextColor="@drawable/selector_bottombar_text"
            app:menu="@menu/navigation"/>

        <include layout="@layout/message" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/clear_FAB"
            android:contentDescription="@string/clear_FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:src="@drawable/ic_action_delete_forever"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/navigation_view_history"
            app:fabSize="normal"
            app:elevation="@dimen/FloatingActionButton_elevation"
            app:pressedTranslationZ="@dimen/FloatingActionButton_pressedTranslationZ"/>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
